<resources>
    <string name="app_name">Messenger</string>
    <!--  Text  -->
    <string name="text_sign_in">登入</string>
    <string name="text_first_name">姓氏</string>
    <string name="text_last_name">名稱</string>
    <string name="text_man">男性</string>
    <string name="text_woman">女性</string>
    <string name="text_secrecy">保密</string>
    <string name="text_phone_number">電話號碼</string>
    <string name="text_886">+886 -</string>
    <string name="text_email_address">電子郵件地址</string>
    <string name="text_new_password">新密碼</string>
    <string name="text_confirm_password">確認密碼</string>
    <string name="text_forget_password">忘記密碼</string>
    <string name="text_success">成功</string>
    <string name="text_error">失敗</string>
    <string name="text_continue">繼續</string>
    <string name="text_skip">略過</string>
    <string name="text_cancel">取消</string>
    <string name="text_loading">載入中</string>
    <string name="text_processing">處理中…</string>
    <string name="text_i_agree">我同意遵守</string>
    <string name="text_social_rule">《社群守則》</string>
    <string name="text_rule">規範</string>
    <string name="text_retry">請重新嘗試</string>
    <!--  Hint  -->
    <string name="hint_not_implemented">目前未實裝</string>
    <string name="hint_sign_in_title">使用手機號碼\n或 Email 帳號登入</string>
    <string name="hint_input_account">輸入電子郵件地址或電話號碼</string>
    <string name="hint_input_account_text">手機號碼或電子郵件</string>
    <string name="hint_input_password_text">密碼</string>
    <string name="hint_storage_account_text">儲存登入資訊</string>
    <string name="hint_create_account_text">建立新帳號</string>
    <string name="hint_forget_password">忘記密碼？</string>
    <string name="hint_fake_facebook_com">fake.facebook.com</string>
    <string name="hint_join_fake_facebook">加入 fake Facebook</string>
    <string name="hint_input_detail">請填入您的名稱及真實訊息。</string>
    <string name="hint_gender">您的性別為何？</string>
    <string name="hint_return_sign_in">返回登入頁面</string>
    <string name="hint_create_account_title">「Messenger」想要使用「fake.facebook.com」登入</string>
    <string name="hint_create_account_subtitle">這會讓App和網路分享關於您的資訊。</string>
    <string name="hint_verify_phone_title">我們將對您的手機發送\n簡訊驗證碼</string>
    <string name="hint_verify_phone_subtitle">這可能會產生一些額外費用</string>
    <string name="hint_already_send_otp">已將驗證碼發送至您的電話號碼</string>
    <string name="hint_input_otp">請填入驗證碼</string>
    <string name="hint_verify_error">驗證失敗</string>
    <string name="hint_verify_success">驗證成功</string>
    <string name="hint_timeout_retry">連線逾時，請重新嘗試</string>
    <string name="hint_empty_error">請勿為空</string>
    <string name="hint_occur_error">發生錯誤</string>
    <string name="hint_auth_error">無法註冊</string>
    <string name="hint_confirm_password_error">請確認密碼是否相同</string>
    <string name="hint_password_error">密碼必須在8位數字及英文字母組成</string>
    <string name="hint_email_error">請輸入正確的電子郵件地址</string>
    <string name="hint_phone_error">請輸入正確的電話號碼</string>
    <string name="hint_last_name_error">請輸入您的名稱</string>
    <string name="hint_first_name_error">請輸入您的姓氏</string>
    <string name="hint_check_details">請您確認\n資料是否正確</string>
    <string name="hint_please_check_agree">請勾選同意按鈕</string>
    <string name="hint_log_in_error_title">登入失敗</string>
    <string name="hint_log_in_error_subtitle">請檢查您的帳號及密碼</string>
    <string name="hint_already_auth">已經註冊過了</string>
</resources>