<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ForgetPasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_forget_password">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="@dimen/_14sdp"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/text_continue"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/_14ssp"
                app:tvBindEdit="@{inputAccount}" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/text_forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/hint_input_account"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <FrameLayout
            android:id="@+id/layoutInputAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/inputAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/background_input"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/hint_input_account_text"
                android:imeOptions="actionDone"
                android:importantForAccessibility="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageDeleteAccount"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:fontFamily="@font/ubuntu_regular"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_round_cancel_24"
                android:tint="@color/buttonBackground"
                android:visibility="gone"
                app:attachedDelete="@{inputAccount}" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/hint_return_sign_in"
            android:textColor="@color/blue_text_selector"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutInputAccount" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>