<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="String" />

        <variable
            name="password"
            type="String" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/_24sdp"
        android:paddingEnd="@dimen/_24sdp"
        android:paddingBottom="@dimen/_24sdp"
        android:scrollbars="none"
        tools:context=".ui.activity.launch.SignInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageIcon"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_messenger"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:text="@string/hint_sign_in_title"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageIcon" />

            <FrameLayout
                android:id="@+id/layoutInputAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHint">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputAccount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/background_input_top"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/hint_input_account_text"
                    android:imeOptions="actionNext"
                    android:importantForAccessibility="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@{email}"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageDeleteAccount"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:fontFamily="@font/ubuntu_regular"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_round_cancel_24"
                    android:tint="@color/buttonBackground"
                    android:visibility="gone"
                    app:attachedDelete="@{inputAccount}" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/layoutInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutInputAccount">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/background_input_bottom"
                    android:hint="@string/hint_input_password_text"
                    android:imeOptions="actionDone"
                    android:importantForAccessibility="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:text="@{password}"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="@dimen/_13ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageDeletePassword"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_round_cancel_24"
                    android:tint="@color/buttonBackground"
                    android:visibility="gone"
                    app:attachedDelete="@{inputPassword}" />

            </FrameLayout>

            <CheckBox
                android:id="@+id/checkboxSignIn"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutInputPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/hint_storage_account_text"
                android:textColor="@color/secondaryText"
                app:layout_constraintBottom_toBottomOf="@id/checkboxSignIn"
                app:layout_constraintStart_toEndOf="@id/checkboxSignIn"
                app:layout_constraintTop_toTopOf="@id/checkboxSignIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/text_sign_in"
                android:textColor="@color/secondaryText"
                android:textSize="@dimen/_12ssp"
                app:btnBindEdit1="@{inputAccount}"
                app:btnBindEdit2="@{inputPassword}"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkboxSignIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonBackground"
                android:includeFontPadding="false"
                android:padding="@dimen/_10sdp"
                android:text="@string/hint_create_account_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:text="@string/hint_forget_password"
                android:textColor="@color/blue_text_selector"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>